# Agente_Perfilamiento

./: .env.example  .gitignore  .pre-commit-config.yaml  HANDOFF.md  README.md  README_CODEX.md  pyproject.toml
data/interviews/: 12345_25572514-525b-433c-a6ec-d29b045bb6bd_20250925134315.json  123_2ea04452-35d4-473d-97c9-ff8bc4e6b142_20250925140449.json  123_78d79353-2de6-4e65-a23a-6ccb20eee1c7_20250925135720.json  123_f70f8367-41a6-480a-a2cd-5a67510dcaf0_20250925132835.json  352_13881d91-d2fc-4609-8385-2d0adc2b72e6_20250924205256.json  Nicolás_8e5c557e-7934-4e70-9f99-5bb9a2231f38_20250926131513.json  Nicolás_cfb31ee1-3653-4312-ba36-6c76295066d6_20250925151302.json  cli_user_c989e40d-eaca-4d6b-8154-4978f626f522_20250925192228.json  user-test_test-flow_20250924204645.json
scripts/: tmp_ltm_entity_test.py  tmp_memory_test.py
src/agente_perfilamiento/: main.py
src/agente_perfilamiento/adapters/: file_entity_repository.py  file_long_term_repository.py  in_memory_repository.py
src/agente_perfilamiento/agents/: analista_node.py  base_agent.py  entrevistador_node.py  fallback_node.py  final_node.py  memory_node.py  perfilamiento_node.py  router_node.py  welcome_node.py
src/agente_perfilamiento/agents/prompts/: analista_agent.txt  entrevistador_agent.txt  fallback_agent.txt  final_agent.txt  memory_agent.txt  perfilamiento_agent.txt  router_agent.txt  welcome_agent.txt
src/agente_perfilamiento/agents/tools/: entity_tools.py  memory_tools.py
src/agente_perfilamiento/application/: orchestrator.py
src/agente_perfilamiento/application/ports/: long_term_memory_repository.py  memory_repository.py
src/agente_perfilamiento/application/services/: entity_memory_service.py  long_term_memory_service.py  memory_service.py
src/agente_perfilamiento/domain/memory/: models.py
src/agente_perfilamiento/domain/models/: conversation_state.py
src/agente_perfilamiento/domain/services/: entity_memory_service.py  long_term_memory_service.py  memory_service.py
src/agente_perfilamiento/infrastructure/config/: settings.py
src/agente_perfilamiento/infrastructure/logging/: logger.py
src/agente_perfilamiento/infrastructure/memory/: file_entity_repository.py  file_long_term_repository.py  in_memory_repository.py  provider.py
src/agente_perfilamiento/infrastructure/persistence/: provider.py
src/agente_perfilamiento/ports/: entity_memory_repository.py  memory_repository.py
src/tests/: test_conversation_flow.py
